# study-polars

./: .gitignore  README.md  pyproject.toml
nbs/: study_polars.ipynb
src/study_polars/: __init__.py
src/tools/: create_check_code.py  score.py
