[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
dependencies = [
  "jupyterlab>=4.3.4",
  "polars[numpy,plot]>=1.19.0",
]
description = "Add your description here"
license = {text = "Apache-2.0"}
name = "study-polars"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/blackjackpy"

[project.scripts]
study-polars = "study_polars:main"

[tool.uv]
dev-dependencies = [
  "jupyterlab-freeze>=0.1.2",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
exclude = ["*.ipynb"]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "CPY", "D", "DOC201", "E501", "INP001", "PLR2004", "RUF039", "T201"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
